[project]
name = "Tgchecker"
version = "0.2.0"
description = "Telegram number checker"
authors = [{ name = "Irbots" }]
dependencies = ["httpx"]
requires-python = ">=3.10"
license = {text = "MIT"}

[project.urls]
Homepage = "https://irbots.com/TG-Number-Analyzer/"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
