[project]
name = "Tgchecker"
version = "0.4.0"
description = "Telegram number checker"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [{ name = "Irbots" }]
dependencies = ["httpx"]
requires-python = ">=3.10"
license = {text = "MIT"}

[project.urls]
Homepage = "https://irbots.com/TG-Number-Analyzer/"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
